prusti/tests/pass/parse/forall_fail.stderr
error: expected `(`
  --> $DIR/forall_fail.rs:10:12
   |
10 | #[requires(forall)]
   |            ^^^^^^

error: expected `|`
  --> $DIR/forall_fail.rs:13:18
   |
13 | #[requires(forall())]
   |                  ^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:16:18
   |
16 | #[requires(forall(|))]
   |                  ^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:19:18
   |
19 | #[requires(forall(||) 1+1)]
   |                  ^^^^

error: expected `:`
  --> $DIR/forall_fail.rs:22:21
   |
22 | #[requires(forall(|a, b| true))]
   |                     ^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:25:18
   |
25 | #[requires(forall(||) || forall(||))]
   |                  ^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:28:18
   |
28 | #[requires(forall(|| 1+1 == 1+1, triggers=[1]))]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:31:18
   |
31 | #[requires(forall(|| true, triggers=[(1,2), 1]))]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:34:18
   |
34 | #[requires(forall(|| true, triggers=1))]
   |                  ^^^^^^^^^^^^^^^^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:37:18
   |
37 | #[requires(forall(||))]
   |                  ^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:40:18
   |
40 | #[requires(forall(|| 1+1 == 1+1))]
   |                  ^^^^^^^^^^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:43:18
   |
43 | #[requires(forall(||, triggers=[]))]
   |                  ^^^^^^^^^^^^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:46:18
   |
46 | #[requires(forall(|| 1+1 == 1+1, triggers=[(1,)]))]
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 13 previous errors

